# worldcup-2026-mcp

./: .gitignore  README.md  claude_desktop_config.json  pyproject.toml
src/: app.py  server.py
tests/: test_server.py
